[package]
name = "xmind_to_all"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "2.0.0"
serde = { version = "1.0.193" , features = ["derive", "rc"] }
serde_json = "1.0"
quick-xml = "0.31.0"
tokio = { version = "1.0", features = ["full"] }
umya-spreadsheet = { version = "1.2.6", features = ["js"] }
toml = { version = "0.8.13" }
once_cell = { version = "1.19.0" }

[user_config]
user_name = "庄啸森"
case_state = "正常"
case_type = "功能测试"
condition = "无"